syntax = "proto3";

package event;
option go_package = "github.com/jjangg96/oasis-rpc-proxy/grpc/event/eventpb";

message GetEscrowEventsByHeightRequest {
  int64 height = 1;
}

message AddEscrowEvent {
  string owner = 1;
  string escrow = 2;
  bytes amount = 3;
  bytes newShares = 4;
}

message TakeEscrowEvent {
  string owner = 1;
  bytes amount = 2;
}

message EscrowEvents {
  repeated AddEscrowEvent add = 1;
  repeated TakeEscrowEvent take = 2;
}

message GetEscrowEventsByHeightResponse {
  EscrowEvents events = 1;
}

message GetTransferEventsByHeightRequest {
  int64 height = 1;
}

message TransferEvent {
  string from = 1;
  string to = 2;
  bytes amount = 3;
}

message GetTransferEventsByHeightResponse {
  repeated TransferEvent events = 1;
}
service EventService {
  rpc GetEscrowEventsByHeight(GetEscrowEventsByHeightRequest)
      returns (GetEscrowEventsByHeightResponse) {};
  rpc GetTransferEventsByHeight(GetTransferEventsByHeightRequest)
      returns (GetTransferEventsByHeightResponse) {};
}